Atualizar o index.html

--- a/e-commerce-product-page/ecommerce-product-page-main/index.html
+++ b/e-commerce-product-page/ecommerce-product-page-main/index.html
@@ -20,11 +20,11 @@
             <img class="logo" src="images/logo.svg" alt="logo">
           </figure>
         </li>
-        <li>Collections</li>
-        <li>Men</li>
-        <li>Women</li>
-        <li>About</li>
-        <li>Contact</li>
+        <li  class="list-men">Collections</li>
+        <li class="list-men">Men</li>
+        <li class="list-men">Women</li>
+        <li class="list-men">About</li>
+        <li class="list-men">Contact</li>
         
           <figure class="profile">
             <img class="cart" src="images/icon-cart.svg" alt="">
